# Pu-uy-Apu

./: GodWithHIV.sh  GodWithJava.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/puuyapu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/: data_processor.cpp  interaction_analyzer.cpp  pattern_matcher.cpp  sleep_detector.cpp  time_utils.cpp
app/src/main/cpp/include/: data_processor.h  interaction_analyzer.h  memory_pool.h  pattern_matcher.h  performance_monitor.h  puuyapu_types.h  sleep_detector.h
app/src/main/cpp/jni/: sleep_tracker_jni.cpp
app/src/main/cpp/models/: interaction_event.cpp
app/src/main/java/com/example/puuyapu/: MainActivity.java
app/src/main/java/io/nava/puuyapu/app/: MainActivity.java
app/src/main/java/io/nava/puuyapu/app/data/cache/: FastMemoryCache.java
app/src/main/java/io/nava/puuyapu/app/data/database/: SleepDatabase.java
app/src/main/java/io/nava/puuyapu/app/data/repository/: NativeDataBridge.java  SleepRepository.java
app/src/main/java/io/nava/puuyapu/app/models/: SleepDetectionResult.java  SleepInterruption.java
app/src/main/java/io/nava/puuyapu/app/services/: DataSyncService.java  InteractionMonitorService.java  SleepTrackingService.java
app/src/main/java/io/nava/puuyapu/app/ui/components/: PerformanceChart.java  RealTimeDisplay.java
app/src/main/java/io/nava/puuyapu/app/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java
app/src/main/java/io/nava/puuyapu/app/ui/settings/: SettingsFragment.java  SettingsViewModel.java
app/src/main/java/io/nava/puuyapu/app/ui/sleeplog/: SleepLogFragment.java
app/src/main/java/io/nava/puuyapu/native/: NativeSleepTracker.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/puuyapu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
